Cleaned up HTML

--- a/FE.html
+++ b/FE.html
@@ -90,15 +90,8 @@
 					</a>
 				</div>
 			</section>
-			<!--		<hr>
-			<section id="main">
-				<h3>Main</h3>
-				<hr>
-				<div class="p">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. esse cumque unde, explicabo totam, in sequi iste recusandae
-						ipsa laudantium, neque excepturi molestias modi velit animi asperiores suscipit? Voluptas</p>
-				</div>
-			</section> -->
+
+			<!-- Equipment section -->
 
 			<section id="equipment">
 				<h3>Equipment</h3>
@@ -118,6 +111,8 @@
 
 				</div>
 			</section>
+
+			<!-- Shop section -->
 
 			<section id="shop">
 				<h3>Shop with us</h3>
