section 3 almost done

--- a/FE.html
+++ b/FE.html
@@ -94,21 +94,35 @@
 			<!-- Equipment section -->
 
 			<section id="equipment">
-				<h3>Equipment</h3>
-				<hr>
-				<div class="p">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. esse cumque unde, explicabo totam, in sequi iste recusandae
-						ipsa laudantium, neque excepturi molestias modi velit animi asperiores suscipit? Voluptas</p>
-				</div>
-				<br>
-				<div id="bubblesImage">
-
-					<div id="CO2" class="bubbles">
-						<a href="">
-							<h4>Co2</h4>
-						</a>
+				<div id="eqWrapper">
+					<h3>Equipment</h3>
+					<hr>
+					<div class="p">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. esse cumque unde, explicabo totam, in sequi iste recusandae
+							ipsa laudantium, neque excepturi molestias modi velit animi asperiores suscipit? Voluptas</p>
 					</div>
+					<br>
+					<div id="bubblesImage">
 
+						<div id="CO2" class="bubbles">
+							<a href="">
+								<h4>Co2</h4>
+							</a>
+						</div>
+
+						<div id="nutrision" class="bubbles">
+							<a href="">
+								<h4>Nutrision</h4>
+							</a>
+						</div>
+
+						<div id="light" class="bubbles">
+							<a href="">
+								<h4>Light</h4>
+							</a>
+						</div>
+
+					</div>
 				</div>
 			</section>
 
