--- a/FE.html
+++ b/FE.html
@@ -9,11 +9,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/global.css">
 	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="CSS/lt.css">
 	<script src="JS/slideshow.js"></script>
 	<title>The Art of Planted Aquarium</title>
 </head>
 
 <body>
+	
 	<header>
 		<h1>The Art of Planted Aquarium</h1>
 		<nav>
@@ -22,6 +24,7 @@
 			<a href="#">Contact Us</a>
 		</nav>
 	</header>
+
 	<main>
 
 		<!-- Slideshow Section -->
@@ -31,22 +34,18 @@
 
 				<div class="mySlides fade">
 					<img src="Files/1.jpg" style="width:100%">
-					<div class="text">Caption Text</div>
 				</div>
 
 				<div class="mySlides fade">
 					<img src="Files/2.jpg" style="width:100%">
-					<div class="text">Caption Two</div>
 				</div>
 
 				<div class="mySlides fade">
-					<img src="Files/3.jpg" style="width:100%">
-					<div class="text">Caption Three</div>
+					<img src="Files/3.jpg" style="width:100%">	
 				</div>
 
 				<div class="mySlides fade">
 					<img src="Files/4.jpg" style="width:100%">
-					<div class="text">Caption 4</div>
 				</div>
 
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -166,9 +165,9 @@
 				</div>
 			</section>
 		</div>
-
+	
 	</main>
-	<hr id="footerHR">
+	
 	<footer>
 		<div class="footerDiv">
 			<h6>Legal</h6>
