--- a/Low Tech.html
+++ b/Low Tech.html
@@ -9,9 +9,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/global.css">
 	<link rel="stylesheet" href="CSS/main.css">
+	<link rel="stylesheet" href="CSS/lt.css">
 	<script src="JS/slideshow.js"></script>
 	<title>Low Tech</title>
 </head>
+
 <body>
 	<header>
 		<h1>The Art of Planted Aquarium</h1>
@@ -26,8 +28,9 @@
 		<article>
 
 			<header class="articleHeader" style="background-image: url(Files/pokus.jpg); width: 100%;">
-				<h2> </h2>
 			</header>
+
+			<h2>Low Tech</h2>
 
 			<section>
 				<h3> </h3>
