--- a/FE.html
+++ b/FE.html
@@ -3,18 +3,33 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Norican" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+	 crossorigin="anonymous">
+	<!-- CSS -->
 	<link rel="stylesheet" href="CSS/global.css">
 	<link rel="stylesheet" href="CSS/main.css">
-	<script src="JS/slideshow.js"></script>
-	<title>The Art of Planted Aquarium</title>
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+	 crossorigin="anonymous"></script>
+
+
+	<title>Title</title>
 </head>
 
-<body>
-	
+<!-- Bootstrap overwrit id -->
+
+<body id="BSO">
+
 	<header>
 		<h1>The Art of Planted Aquarium</h1>
 		<nav>
@@ -40,7 +55,7 @@
 				</div>
 
 				<div class="mySlides fade">
-					<img src="Files/3.jpg" style="width:100%">	
+					<img src="Files/3.jpg" style="width:100%">
 				</div>
 
 				<div class="mySlides fade">
@@ -164,9 +179,9 @@
 				</div>
 			</section>
 		</div>
-	
+
 	</main>
-	
+
 	<footer>
 		<div class="footerDiv">
 			<h6>Legal</h6>
