--- a/FE.html
+++ b/FE.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Norican" rel="stylesheet">
@@ -91,10 +91,10 @@
 					</div>
 					<a href="">
 						<ul class="grid">
-							<li class="small" style="background-image:url(Files/1.jpg);"></li>
-							<li class="large" style="background-image:url(Files/2.jpg);"></li>
-							<li class="large" style="background-image:url(Files/3.jpg);"></li>
-							<li class="small" style="background-image:url(Files/4.jpg);"></li>
+							<li class="box small" style="background-image:url(Files/1.jpg);"></li>
+							<li class="box large" style="background-image:url(Files/2.jpg);"></li>
+							<li class="box large" style="background-image:url(Files/3.jpg);"></li>
+							<li class="box small" style="background-image:url(Files/4.jpg);"></li>
 						</ul>
 					</a>
 				</div>
